--- a/conf/akka.conf
+++ b/conf/akka.conf
@@ -4,6 +4,8 @@ akka {
     stdout-loglevel = "DEBUG"
     jvm-exit-on-fatal-error = on
     actor {
+        debug.receive=on
+
         provider = "akka.actor.LocalActorRefProvider"
 
         default-dispatcher {
